swagger文档补充
